<resources>
    <string name="app_name">ShareBook</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register Now</string>
    <string name="prompt_password_again">re-enter password</string>
    <string name="back">back</string>
    <string name="username_string">username</string>
    <string name="error_two_password_not_match">two passwords do not match</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">profile</string>
    <string name="accepted">Accepted</string>
    <string name="available">Available</string>
    <string name="requested">Requested</string>
    <string name="db_username_email_tuple">username_email_tuple</string>
    <string name="field_username">username</string>
    <string name="title_my_book">My Bookshelf</string>
    <string name="title_my_borrow">Borrowing</string>
    <string name="add_book">add book</string>
    <string name="title_activity_add_book_screen">add_book_screen</string>
    <string name="prompt_signup_email">email</string>
    <string name="db_books">books</string>
    <string name="borrowed">Borrowed</string>
    <string name="db_request_notification">request_notification</string>
    <string name="title_activity_maps">Map</string>

</resources>
